@@ -1,11 +1,13 @@
 package my.app.files.service.impl;
 
-import jakarta.persistence.EntityNotFoundException;
 import java.util.List;
+import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import my.app.files.dto.labels.CreateLabelRequestDto;
 import my.app.files.dto.labels.LabelDto;
 import my.app.files.dto.labels.UpdateLabelRequestDto;
+import my.app.files.exception.LabelAlreadyExistsException;
+import my.app.files.exception.LabelNotFoundException;
 import my.app.files.mapper.LabelMapper;
 import my.app.files.model.Label;
 import my.app.files.repository.LabelRepository;
@@ -20,9 +22,11 @@ public class LabelServiceImpl implements LabelService {
 
     @Override
     public LabelDto createLabel(CreateLabelRequestDto dto) {
-        if (labelRepository.findByName(dto.getName()).isPresent()) {
-            throw new IllegalArgumentException("Label with this name already exists");
-        }
+        labelRepository.findByName(dto.getName())
+                .ifPresent(label -> {
+                    throw new LabelAlreadyExistsException("Label with this name already exists");
+                });
+
         Label label = labelMapper.toEntity(dto);
         return labelMapper.toDto(labelRepository.save(label));
     }
@@ -31,13 +35,13 @@ public class LabelServiceImpl implements LabelService {
     public List<LabelDto> getAllLabels() {
         return labelRepository.findAll().stream()
                 .map(labelMapper::toDto)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
     public LabelDto updateLabel(Long id, UpdateLabelRequestDto dto) {
         Label label = labelRepository.findById(id)
-                .orElseThrow(() -> new EntityNotFoundException("Label not found"));
+                .orElseThrow(() -> new LabelNotFoundException("Label not found"));
         labelMapper.updateEntity(label, dto);
         return labelMapper.toDto(labelRepository.save(label));
     }
@@ -45,7 +49,7 @@ public class LabelServiceImpl implements LabelService {
     @Override
     public void deleteLabel(Long id) {
         if (!labelRepository.existsById(id)) {
-            throw new EntityNotFoundException("Label not found");
+            throw new LabelNotFoundException("Label not found");
         }
         labelRepository.deleteById(id);
     }
